1.0 "Asieoniezi"

0.128 TBA
 429449 Pan 0.126, 0.127 won't compile w/gtk 2.6.x (Jeff Berman)
 429485 Articles marked read showing back up (Frank Tabor)

0.127 "Eckythump"
 428151 Compilation error in e-util.cc under fink (SciFi)
 424381 Pango warnings from attachments with accented chars (SciFi)
 427230 Sigfiles with CR/LFs not handled properly (Artur Jachacy)
 393589 X-Face not shown properly (Ivan Rajkovic)
 425993 Crash when downloading new headers in 0.126 (Drew Yavor)
 427212 Crash when hitting 'read more' when no group loaded (Duncan)
 424240 Downloading headers from the command line (Eric Lauriault)
 424248 In --nogui mode, exit when the last task finishes. (Eric Lauriault)
 427165 Task pane's ETA wrong on new xover tasks (Charles)
 426375 Task pane's ETA wrong when selecting > 4GB of queued files (Mike)

0.126 "Demon Sweat"
 420618 Decode in a worker thread for faster GUI/network (Calin Culanu)
 423376 Status Bar's "tasks" and "log" buttons toggle the windows (Walt)
 411446 Use `Message-ID', not `Message-Id', when posting (Charles)
 411447 Header pane loses selection when deleting articles (Jeff Berman)
 411657 Post window's cursor appears in the wrong place (Frank Tabor)
 411659 post window's "save draft" file dialog gets confused (Charles)
 411959 profile's `Reply-To' header used wrong in 0.125 (Mimi Doucet)
 423684 Latest glib issues "memory warnings" on startup (SciFi)

0.125 "Potzrebie"
 408767 connection-limit change not recognized until restart (Chuck)
 408778 0.124 bug: signature "command" executed twice (Jack Cuyler)
 408866 0.124 bug: error with the signature delimiter (Mimi Doucet)
 408990 0.124 bug: no more line break at 80 characters (longint)
 371868 add common headers to `more headers' in post window (Frederic Crozat)

0.124 "Goblin Worlds"
 370195 0.123 mime decoding errors (Walt)
 404833 marking a group as read doesn't stick between sessions (Frank Tabor)
 406284 array bounds read in StringView::strchr (Bruno Barberi Gnecco)