@@ -3,6 +3,7 @@
 0.128 TBA
  429449 Pan 0.126, 0.127 won't compile w/gtk 2.6.x (Jeff Berman)
  429485 Articles marked read showing back up (Frank Tabor)
+ 407301 All new articles are shown, regardless of score (Per Hedeland)
 
 0.127 "Eckythump"
  428151 Compilation error in e-util.cc under fink (SciFi)
